--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,67 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  background-color: black;
+  height: 100vh;
+  width: 100%;
+  align-items: flex-start;
+  padding-top: 40px;
+  background-image: url('https://www.ppt-backgrounds.net/thumbs/book-old-papers-and-books----image-backgrounds.jpg');
+  background-repeat: no-repeat;
+  background-size: contain, cover;
+  font-family: cursive;
+}
+
+h1 {
+  font-size: 60px;
+}
+
+
+.todo {
+  margin: 0 auto;
+  height: 50vh;
+  width: 90%;
+}
+
+h3 {
+  font-weight: 900;
+  text-decoration: underline;
+}
+
+header {
+  text-transform: uppercase;
+  text-align: center;
+  width: 100%;
+}
+
+.container {
+  display: flex;
+  justify-content: space-around;
+  height: 80%;
+  width: 100%;
+}
+
+.list {
+  text-transform: uppercase;
+  font-size: 25px;
+
+}
+
+form {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-right: 50%;
+  background-color: transparent;
 }
 
-.App-link {
-  color: #61dafb;
+.task {
+  background-color: transparent;
+  font-family: cursive;
+  border-color: rgba(53, 42, 42, 0.253);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.clear-container {
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 22%;
+
 }
